# queues-project

./: README.md
client/: package.json  pnpm-lock.yaml
client/app/: layout.tsx  page.tsx
client/app/auth/login/: page.tsx
client/app/auth/signin/: page.tsx
client/app/auth/signup/: page.tsx
client/app/auth/verify/: page.tsx
function/: .env.example  .gitignore  function_app.py  pyproject.toml
server/: .env.example  pyproject.toml
server/server/: __init__.py  main.py
server/server/controllers/: firebase.py
server/server/models/: EmailActivation.py  UserLogin.py  UserSignup.py
server/server/utils/: database.py
