[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["GASC1211 <48170476+Gasc1211@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = 'server:dev'